[package]
name = "multipart-stream"
version = "0.1.0"
authors = ["Scott Lamb <slamb@slamb.org>"]
edition = "2018"
license = "MIT/Apache-2.0"
readme = "README.md"
description = "parse and serialize async `multipart/x-mixed-replace` streams."
keywords = ["http", "multipart", "stream", "async", "hyper"]
categories = ["web-programming::http-client", "web-programming::http-server", "asynchronous"]
repository = "https://github.com/scottlamb/multipart-stream-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.0.1"
futures = "0.3.14"
http = "0.2.4"
httparse = "1.4.0"
pin-project = "1.0.7"

[dev-dependencies]
hyper = { version = "0.14", features = ["http1", "client", "server", "stream", "tcp"] }
mime = "0.3.16"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
